--- a/UlityCore_v3/pom.xml
+++ b/UlityCore_v3/pom.xml
@@ -43,6 +43,10 @@
             <id>CodeMC</id>
             <url>https://repo.codemc.org/repository/maven-public</url>
         </repository>
+        <repository>
+            <id>papermc</id>
+            <url>https://papermc.io/repo/repository/maven-public/</url>
+        </repository>
     </repositories>
 
     <dependencies>
@@ -81,6 +85,12 @@
             <groupId>fr.mrmicky</groupId>
             <artifactId>FastBoard</artifactId>
             <version>1.1.0</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.papermc</groupId>
+            <artifactId>paperlib</artifactId>
+            <version>1.0.5</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
